# aivedio

./: .env.example  .gitignore  .gitignore_info.md  CHANGELOG_CHARACTER_FIX.md  CLEANUP_GUIDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  TASK_CHAIN_FIX_README.md  afk-ralph.sh  alembic.ini  cleanup_project.py  docker-compose.yml  main.py  progress.txt  pyproject.toml  ralph-once.sh  requirements.txt  skills-lock.json  start_all_services.py  start_services.py  start_services_with_logs.py  修复完成总结.md  图像质量优化-快速指南.md  测试检查清单.md
alembic/: env.py
configs/: comfyui_workflow.json  comfyui_workflow_fast.json  comfyui_workflow_ipadapter.json  comfyui_workflow_juggernaut.json  comfyui_workflow_pro.json  comfyui_workflow_sdxl.json  comfyui_workflow_sdxl_native.json  comfyui_workflow_txt2img.json
docs/: QUICK_FIX_GUIDE.md  RTX3060性能优化指南.md  ai-short-drama-production-prd.md  best-practices-catalog.md  best-practices.md  character-appearance-guide.md  character-consistency-fix.md  character-consistency.md  comfyui-setup-guide.md  comfyui-workflow-enhancement-implementation-guide.md  deployment-guide.md  enhanced-script-generation-guide.md  frontend-setup-guide.md  ipadapter-usage-guide.md  llm-performance-benchmarks.md  llm-service-guide.md  model-deployment-guide.md  model-setup-guide.md  monitoring-and-maintenance.md  quick-start.md  user-manual.md  video-production-fix-summary.md  workflow-template-models.md  优秀ComfyUI工作流推荐.md  图像质量优化方案.md  图生视频优化方案.md  增强版剧本生成开发总结.md  如何使用增强版剧本生成.md  视频生产流程修复说明.md  降低AI感-真实感优化方案.md
examples/: example-script.json  (+1 more)
(+175 files in other folders)
